--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": "7.2.5",
+        "php": "8.1.10",
         "ext-curl": "*",
         "ext-openssl": "*",
         "ext-date": "*",
@@ -31,30 +31,29 @@
         "ext-gd": "*",
         "ext-exif": "*",
         "ext-fileinfo": "*",
-        "doctrine/doctrine-module": "^4.1",
-        "league/container": "2.4.1",
-        "monolog/monolog": "^2.3",
-        "guzzlehttp/psr7": "^2.1",
-        "league/route": "3.1.0",
-        "twig/twig": "^3.3",
-        "doctrine/orm": "^2.10",
-        "beberlei/doctrineextensions": "^1.3",
-        "firebase/php-jwt": "^5.5",
-        "phpmailer/phpmailer": "^6.5",
-        "php-curl-class/php-curl-class": "^9.5",
-        "laminas/laminas-i18n": "^2.10",
-        "laminas/laminas-mvc-i18n": "^1.1",
-        "guzzlehttp/guzzle": "^7.4",
-        "gedmo/doctrine-extensions": "3.6.0"
+        "doctrine/doctrine-module": "5.2.0",
+        "league/container": "4.2.0",
+        "monolog/monolog": "3.2.0",
+        "guzzlehttp/psr7": "2.4.1",
+        "league/route": "5.1.2",
+        "twig/twig": "3.4.3",
+        "doctrine/orm": "2.12.4",
+        "beberlei/doctrineextensions": "1.3.0",
+        "firebase/php-jwt": "6.3.0",
+        "phpmailer/phpmailer": "^6.6",
+        "php-curl-class/php-curl-class": "9.8.0",
+        "laminas/laminas-servicemanager": "3.15.1",
+        "laminas/laminas-i18n": "2.19.0",
+        "laminas/laminas-mvc-i18n": "1.4.0",
+        "guzzlehttp/guzzle": "7.5.0",
+        "gedmo/doctrine-extensions": "3.9.0",
+        "laminas/laminas-diactoros": "^2.19",
+        "laminas/laminas-httphandlerrunner": "^2.3",
+        "cherif/inertia-psr15": "^0.1.0",
+        "fullpipe/twig-webpack-extension": "^4.0"
     },
     "minimum-stability": "stable",
     "config": {
-        "optimize-autoloader": true,
-        "allow-plugins": {
-            "composer/package-versions-deprecated": true
-        },
-        "platform": {
-            "php": "7.2.5"
-        }
+        "optimize-autoloader": true
     }
 }
