--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "metapphu/apollo",
+    "name": "6ithu/apollo-fork",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
             "role": "Author",
-            "name": "Metapp",
-            "email": "info@metapp.hu"
+            "name": "6IT",
+            "email": "info@6it.hu"
         }
     ],
     "autoload": {
@@ -31,7 +31,7 @@
         "ext-gd": "*",
         "ext-exif": "*",
         "ext-fileinfo": "*",
-        "doctrine/doctrine-module": "5.2.0",
+        "doctrine/doctrine-module": "5.*",
         "league/container": "4.2.0",
         "monolog/monolog": "3.2.0",
         "guzzlehttp/psr7": "2.4.1",
@@ -42,9 +42,9 @@
         "firebase/php-jwt": "6.3.2",
         "phpmailer/phpmailer": "^6.6",
         "php-curl-class/php-curl-class": "9.8.0",
-        "laminas/laminas-servicemanager": "3.15.1",
+        "laminas/laminas-servicemanager": "3.*",
         "laminas/laminas-i18n": "2.19.0",
-        "laminas/laminas-mvc-i18n": "1.4.0",
+        "laminas/laminas-mvc-i18n": "1.*",
         "guzzlehttp/guzzle": "7.5.0",
         "gedmo/doctrine-extensions": "3.9.0",
         "laminas/laminas-diactoros": "^2.19",
